--- a/body.css
+++ b/body.css
@@ -1,6 +1,7 @@
 
 html {
     font-family: sans-serif;
+
   }
 
   body {
@@ -8,8 +9,8 @@ html {
     max-width: 800px;
     min-width: 480px;
     margin: 0 auto;
+
   }
-  
   .form input[type="number"] {
     width: 200px;
   }
@@ -18,10 +19,24 @@ html {
     color: white;
     padding: 3px;
   }
-.container{
-    box-shadow: -2px 2px 3px rgb(152, 152, 152);
+ .container{
+    box-shadow: 0 0 4px 0 rgba(0,0,0,.25);
     padding: 10px 15px 10px 15px;
     border-radius: 15px;
+    width: 400px;
+    min-width: 350px;
+    max-width: 800px; 
+    text-align: center; 
+    padding: 20px;
+    background-color: #f0f0f0; 
+    border: 2px solid #333; 
+    margin: 20px; 
+} 
+.main{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100vh;
 }
 .guessSubmit{
     padding: 9px 18px;
@@ -38,32 +53,72 @@ html {
     font-size: 9px;
     font-weight: 700;
     cursor: pointer;
+    margin-top: 6px;
 }
 .guessSubmit:hover{
     background: #0b3b26;
     box-shadow: 0 0 8px 2px rgba(0,0,0,.25);
 }
 .guessField{
-    border-color: #16563a;
-    border-width: 2px;
+    border-color: #32aa27;
+    border-width: 3px;
     border-radius: 5px;
+    border-style: solid;
 }
 
 .resetButton{
     background-color: #208437;
     border: 1px solid #16563a;
     cursor: pointer;
-    padding: 7px 27px;
-    margin-top: 10px;
+    padding: 7px 5px;
+    width: 153px;
+    min-width: 150px;
+    margin: 5px;
     color:white;
     transition: color .2s ease,background-color .2s ease,border .2s ease;
     border-radius: 5px;
     text-decoration: none;
     font-family: sans-serif;
-
 }
 
 .resetButton:hover{
     background-color: white;
     color: #208437;
+}
+.content{
+  color:#307941;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+  font-weight:300;
+}
+.labelText{
+  color: gray;
+}
+
+.heading{
+  font-weight: 1000;
+  font-size: 36px;
+}
+header{
+  display: flex;
+  justify-content:space-between;
+
+}
+.quicksellImg,
+.doubletickImg{
+  width: 128px;
+  height: 42px;
+  box-shadow: 0 0 8px (0,0,0,0.25);
+  cursor: pointer;
+}
+.quicksellImg{
+  position: relative;
+  left:-120px;
+  top:20px;
+}
+
+.doubletickImg{
+  position: relative;
+  right:-120px;
+  top:20px;
 }
