--- a/body.css
+++ b/body.css
@@ -51,7 +51,7 @@ html {
     transition: box-shadow .21s ease-in;
     color:white;
     font-family: Arial,Helvetica,sans-serif;
-    font-size: 9px;
+    font-size: 14px;
     font-weight: 700;
     cursor: pointer;
     margin-top: 6px;
@@ -81,6 +81,8 @@ html {
     border-radius: 5px;
     text-decoration: none;
     font-family: sans-serif;
+    font-size: 18px;
+    font-weight: 400;
 }
 
 .resetButton:hover{
